test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/cpol-match-all-exclude-one/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app5
spec:
  background: false
  rules:
    - name: check-label-app
      match:
        all:
        - resources:
            kinds:
            - '*'
            operations:
            - CREATE
            namespaces:
            - production
            - staging
      exclude:
        all:
        - resources:
             kinds:
             - "Deployment"
             operations:
             - CREATE
      validate:
        failureAction: Audit
        cel:
          generate: true
          expressions:
            - expression: "'app' in object.metadata.labels"
